--- a/remini apk.html
+++ b/remini apk.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="Octocat's homepage">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Photo Enhancement: Redesigning Your Photos with Ease</title>
     <style>
